# gka-calendar-qt

./: CMakeLists.txt  INSTALL.md  README.md  main.cpp
calendar-list/src/: CMakeLists.txt  CalendarItem.cpp  CalendarItem.h  CalendarListModel.cpp  CalendarListModel.h  CalendarListModel.pro  CalendarListModelPlugin.cpp  CalendarListModelPlugin.h  DayGridModel.cpp  DayGridModel.h  DayItem.cpp  DayItem.h  WeekDay.cpp  WeekDay.h  WeekEvent.cpp  WeekEvent.h  WeekGridModel.cpp  WeekGridModel.h  YearGridModel.cpp  YearGridModel.h  YearItem.cpp  YearItem.h  qmldir
calendar-list/tests/: CMakeLists.txt  day_grid_test.cpp  smersh.h  test_main.cpp  week_grid_test.cpp  year_grid_test.cpp
debian/: changelog  control  copyright
files/desktop/: CMakeLists.txt  calendar.desktop.in
files/images/: CMakeLists.txt
i18n/src/: CMakeLists.txt  i18n.cpp  i18n_p.h  listener.cpp  listener_p.h  livetimer.cpp  livetimer_p.cpp  livetimer_p.h  livetimer_p_p.h  plugin.cpp  plugin.h  qmldir  timeutils_p.h
i18n/tests/: CMakeLists.txt
i18n/tests/LocalizedApp/: CMakeLists.txt
i18n/tests/LocalizedApp/src/: LocalizedApp.qml  tst_i18n_LocalizedApp.cpp
i18n/tests/RelativeTime/: CMakeLists.txt
i18n/tests/RelativeTime/src/: RelativeTime.qml  tst_i18n_RelativeTime.cpp
po/: CMakeLists.txt  ar.po  de.po  el.po  es.po  fr.po  ga.po  gd.po  gka-calendar-qt.pot  ja.po  nb.po  ne.po  nl.po  ru.po  zh.po
qml/: CMakeLists.txt  CalendarMenu.qml  CollectionsDialog.qml  ColourDialog.qml  DayViewGrid.qml  DayViewItem.qml  DeleteDialog.qml  EditCollectionDialog.qml  EditEventDialog.qml  EventListModel.qml  MainMenu.qml  RemindersModel.qml  SettingsDialog.qml  ToDoView.qml  ToDoViewItem.qml  ToDoViewMemoItem.qml  WeekViewDayItem.qml  WeekViewGrid.qml  YearViewGrid.qml  ZoomButton.qml  ZoomCalendar.qml  dateExt.js  lunar.js  main.qml
src/: config.h.in  main.cpp
