configure_file(lunar.js lunar.js COPYONLY)
configure_file(dateExt.js dateExt.js COPYONLY)
configure_file(ColorUtils.js ColorUtils.js COPYONLY)
configure_file(main.qml main.qml COPYONLY)
configure_file(CalendarMenu.qml CalendarMenu.qml COPYONLY)
configure_file(EventListModel.qml EventListModel.qml COPYONLY)
configure_file(WeekViewGrid.qml WeekViewGrid.qml COPYONLY)
configure_file(WeekViewDayItem.qml WeekViewDayItem.qml COPYONLY)
configure_file(EditCollectionDialog.qml EditCollectionDialog.qml COPYONLY)
configure_file(EditEventDialog.qml EditEventDialog.qml COPYONLY)
configure_file(DeleteDialog.qml DeleteDialog.qml COPYONLY)
configure_file(RemindersModel.qml RemindersModel.qml COPYONLY)
configure_file(YearViewGrid.qml YearViewGrid.qml COPYONLY)
configure_file(DayViewGrid.qml DayViewGrid.qml COPYONLY)
configure_file(DayViewItem.qml DayViewItem.qml COPYONLY)
configure_file(ToDoView.qml ToDoView.qml COPYONLY)
configure_file(ToDoViewItem.qml ToDoViewItem.qml COPYONLY)
configure_file(ToDoViewMemoItem.qml ToDoViewMemoItem.qml COPYONLY)
configure_file(CollectionsDialog.qml CollectionsDialog.qml COPYONLY)
configure_file(SettingsDialog.qml SettingsDialog.qml COPYONLY)
configure_file(ColourDialog.qml ColourDialog.qml COPYONLY)
configure_file(ZoomButton.qml ZoomButton.qml COPYONLY)
configure_file(ZoomCheckBox.qml ZoomCheckBox.qml COPYONLY)
configure_file(ZoomRadioButton.qml ZoomRadioButton.qml COPYONLY)
configure_file(ZoomCalendar.qml ZoomCalendar.qml COPYONLY)

file(GLOB JS_FILES *.js)
file(GLOB QML_FILES *.qml)

foreach(JS_FILE ${JS_FILES})
	install(FILES ${JS_FILE} DESTINATION ${KDE_INSTALL_QMLDIR}/org/gka/calendar-qt)
endforeach(JS_FILE)

foreach(QML_FILE ${QML_FILES})
	install(FILES ${QML_FILE} DESTINATION ${KDE_INSTALL_QMLDIR}/org/gka/calendar-qt)
endforeach(QML_FILE)

